# Astroid-shoot

./: CMakeLists.txt  README.md  Space shooter.sln
Space shooter/: Animation.cpp  Space shooter.vcxproj  Space shooter.vcxproj.filters  astroids.cpp  astroids.h  main.cpp  player.cpp  player.h
src/: Animation.h  Global.h  astroids.cpp  astroids.h  fps.h  healing.cpp  healing.h
src/Assets/: Astroid.aseprite  error_logger.txt
